After css change and before moving files in folder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <ul>
                         <li><a href="">THE EXPERIENCE</a></li>
                         <li><a href="">FITNESS & WELLNESS</a></li>
-                        <li><a href="">RACQUEST SPORTS</a></li>
+                        <li><a href="">RACQUET SPORTS</a></li>
                         <li><a href="">EVENTS & SOCIAL</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
