--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="HeaderAndFooter.css">
+    <link rel="stylesheet" href="CSS/HeaderAndFooter.css">
     <title>Document</title>
-    <link rel="stylesheet" href="mainStyle.css">
+    <link rel="stylesheet" href="CSS/mainStyle.css">
 </head>
 <body>
     <main>
@@ -204,6 +204,6 @@
             </div>
         </footer>
     </main>
-    <script src="index.js"></script>
+    <script src="JS/index.js"></script>
 </body>
 </html>
